# Loopy

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  Converter.cpp  Converter.h  FFMpegExtractor.cpp  FFMpegExtractor.h  FFMpegTest.cpp  FFMpegTest.h  MediaSource.cpp  NDKExtractor.cpp  NDKExtractor.h  Player.cpp  StorageDataSource.cpp  StorageDataSource.h  native-lib.cpp
app/src/main/java/de/michaelpohl/loopy/: KoinGraph.kt  MainActivity.kt
app/src/main/java/de/michaelpohl/loopy/common/: Enums.kt  Extensions.kt  Settings.kt  StorageRepository.kt
app/src/main/java/de/michaelpohl/loopy/common/jni/: JniBridge.kt
app/src/main/java/de/michaelpohl/loopy/model/: AppStateRepository.kt  AudioFilesRepository.kt  DataRepository.kt  ExternalStorageManager.kt  InternalDataRepository.kt
app/src/main/java/de/michaelpohl/loopy/ui/main/filebrowser/: BrowserViewModel.kt  FileBrowserViewModel.kt
app/src/main/java/de/michaelpohl/loopy/ui/main/filebrowser/adapter/: AudioItemHolder.kt
app/src/main/java/de/michaelpohl/loopy/ui/main/mediastorebrowser/: MediaStoreBrowserViewModel.kt
app/src/main/java/de/michaelpohl/loopy/ui/main/player/: PlayerFragment.kt  PlayerViewModel.kt  SettingsDialogFragment.kt
app/src/main/java/de/michaelpohl/loopy/ui/main/settings/: AppSetting.kt  SettingsFragment.kt  SettingsViewModel.kt
app/src/main/java/de/michaelpohl/loopy/ui/main/settings/items/: SettingsItemModel.kt  SettingsMultipleChoiceViewHolder.kt  SettingsToggleableViewHolder.kt
app/src/main/res/layout/: fragment_files_list.xml  fragment_mediastore_list.xml  item_settings_multiplechoice.xml
